vpc setup correction.

--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -5,7 +5,7 @@
     - name: Import VPC Variable
       include_vars: vars/vpc_setup
 
-    - name:L Create vprofile VPC
+    - name: Create vprofile VPC
       ec2_vpc_net:
         name: "{{vpc_name}}"
         cidr_block: "{{vpcCidr}}"
