--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
   connection: local
   gather_facts: False
-  task:
+  tasks:
     - name: Import VPC Variable
       include_vars: vars/vpc_setup
 
