--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -16,8 +16,8 @@
         state: "{{state}}"
       register: vpcout
 
-    - debug:
-        var: vpcout
+  #  - debug:
+  #     var: vpcout
 
     - name: Create Public Subnet 1 in Zone1
       ec2_vpc_subnet:
@@ -31,3 +31,26 @@
            name: CE3S-pubsub1
       register: pubsub1_out
 
+    - name: Create Public Subnet 2 in Zone2
+          ec2_vpc_subnet:
+             vpc_id: "{{vpcout.vpc.id}}"
+             region: "{{region}}"
+             az: "{{zone2}}"
+             state: "{{state}}"
+             cidr: "{{Public2Cidr}}"
+             map_public: yes
+             resource_tags:
+               name: CE3S-pubsub2
+          register: pubsub2_out
+
+        - name: Create Public Subnet 3 in Zone3
+              ec2_vpc_subnet:
+                 vpc_id: "{{vpcout.vpc.id}}"
+                 region: "{{region}}"
+                 az: "{{zone3}}"
+                 state: "{{state}}"
+                 cidr: "{{Public3Cidr}}"
+                 map_public: yes
+                 resource_tags:
+                   name: CE3S-pubsub3
+              register: pubsub3_out
