--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -54,3 +54,39 @@
          resource_tags:
            name: CE3S-pubsub3
       register: pubsub3_out
+
+    - name: Create Private Subnet 1 in Zone1
+      ec2_vpc_subnet:
+         vpc_id: "{{vpcout.vpc.id}}"
+         region: "{{region}}"
+         az: "{{zone1}}"
+         state: "{{state}}"
+         cidr: "{{Private1Cidr}}"
+         map_public: yes
+         resource_tags:
+           name: CE3S-privsub1
+      register: privsub1_out
+
+    - name: Create Private Subnet 2 in Zone2
+      ec2_vpc_subnet:
+         vpc_id: "{{vpcout.vpc.id}}"
+         region: "{{region}}"
+         az: "{{zone2}}"
+         state: "{{state}}"
+         cidr: "{{Private2Cidr}}"
+         map_public: yes
+         resource_tags:
+           name: CE3S-privsub2
+      register: privsub2_out
+
+    - name: Create Private Subnet 3 in Zone3
+      ec2_vpc_subnet:
+         vpc_id: "{{vpcout.vpc.id}}"
+         region: "{{region}}"
+         az: "{{zone3}}"
+         state: "{{state}}"
+         cidr: "{{Private3Cidr}}"
+         map_public: yes
+         resource_tags:
+           name: CE3S-privsub3
+      register: privsub13_out
