--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -7,13 +7,13 @@
 
     - name: Create CE3S VPC
       ec2_vpc_net:
-        name: "{{vpc_name}}"
-        cidr_block: "{{vpcCidr}}"
-        region: "{{region}}"
+        name: "{{ vpc_name }}"
+        cidr_block: "{{ vpcCidr }}"
+        region: "{{ region }}"
         dns_support: yes
         dns_hostnames: yes
         tenancy: default
-        state: "{{state}}"
+        state: "{{ state }}"
       register: vpcout
 
   #  - debug:
@@ -21,11 +21,11 @@
 
     - name: Create Public Subnet 1 in Zone1
       ec2_vpc_subnet:
-         vpc_id: "{{vpcout.vpc.id}}"
-         region: "{{region}}"
-         az: "{{zone1}}"
-         state: "{{state}}"
-         cidr: "{{Public1Cidr}}"
+         vpc_id: "{{ vpcout.vpc.id }}"
+         region: "{{ region }}"
+         az: "{{ zone1 }}"
+         state: "{{ state }}"
+         cidr: "{{ Public1Cidr }}"
          map_public: yes
          resource_tags:
            Name: CE3S-pubsub1
@@ -33,11 +33,11 @@
 
     - name: Create Public Subnet 2 in Zone2
       ec2_vpc_subnet:
-         vpc_id: "{{vpcout.vpc.id}}"
-         region: "{{region}}"
-         az: "{{zone2}}"
-         state: "{{state}}"
-         cidr: "{{Public2Cidr}}"
+         vpc_id: "{{ vpcout.vpc.id }}"
+         region: "{{ region }}"
+         az: "{{ zone2 }}"
+         state: "{{ state }}"
+         cidr: "{{ Public2Cidr }}"
          map_public: yes
          resource_tags:
            Name: CE3S-pubsub2
@@ -45,11 +45,11 @@
 
     - name: Create Public Subnet 3 in Zone3
       ec2_vpc_subnet:
-         vpc_id: "{{vpcout.vpc.id}}"
-         region: "{{region}}"
-         az: "{{zone3}}"
-         state: "{{state}}"
-         cidr: "{{Public3Cidr}}"
+         vpc_id: "{{ vpcout.vpc.id }}"
+         region: "{{ region }}"
+         az: "{{ zone3 }}"
+         state: "{{ state }}"
+         cidr: "{{ Public3Cidr }}"
          map_public: yes
          resource_tags:
            Name: CE3S-pubsub3
@@ -57,11 +57,11 @@
 
     - name: Create Private Subnet 1 in Zone1
       ec2_vpc_subnet:
-         vpc_id: "{{vpcout.vpc.id}}"
-         region: "{{region}}"
-         az: "{{zone1}}"
-         state: "{{state}}"
-         cidr: "{{Private1Cidr}}"
+         vpc_id: "{{ vpcout.vpc.id }}"
+         region: "{{ region }}"
+         az: "{{ zone1 }}"
+         state: "{{ state }}"
+         cidr: "{{ Private1Cidr }}"
          map_public: yes
          resource_tags:
            Name: CE3S-privsub1
@@ -69,11 +69,11 @@
 
     - name: Create Private Subnet 2 in Zone2
       ec2_vpc_subnet:
-         vpc_id: "{{vpcout.vpc.id}}"
-         region: "{{region}}"
-         az: "{{zone2}}"
-         state: "{{state}}"
-         cidr: "{{Private2Cidr}}"
+         vpc_id: "{{ vpcout.vpc.id }}"
+         region: "{{ region }}"
+         az: "{{ zone2 }}"
+         state: "{{ state }}"
+         cidr: "{{ Private2Cidr }}"
          map_public: yes
          resource_tags:
            Name: CE3S-privsub2
@@ -81,11 +81,11 @@
 
     - name: Create Private Subnet 3 in Zone3
       ec2_vpc_subnet:
-         vpc_id: "{{vpcout.vpc.id}}"
-         region: "{{region}}"
-         az: "{{zone3}}"
-         state: "{{state}}"
-         cidr: "{{Private3Cidr}}"
+         vpc_id: "{{ vpcout.vpc.id }}"
+         region: "{{ region }}"
+         az: "{{ zone3 }}"
+         state: "{{ state }}"
+         cidr: "{{ Private3Cidr }}"
          map_public: yes
          resource_tags:
            Name: CE3S-privsub3
@@ -93,10 +93,24 @@
 
     - name: Internet Gateway Setup
       ec2_vpc_igw:
-        vpc_id: "{{vpcout.vpc.id}}"
-        region: "{{region}}"
-        state: "{{state}}"
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
+        state: "{{ state }}"
         resource_tags:
           Name: CE3S_IGW
       register: igw_out
 
+    - name: Set up public subnet route table
+      ec2_vpc_route_table:
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: us-east-1
+        tags:
+          Name: PublicRT
+        subnets:
+          - "{{ pubsub1_out.subnet.id }}"
+          - "{{ pubsub2_out.subnet.id }}"
+          - "{{ pubsub3_out.subnet_id }}"
+        routes:
+          - dest: 0.0.0.0/0
+            gateway_id: "{{ igw_out.gateway_id }}"
+      register: public_route_table
