--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -105,12 +105,13 @@
         vpc_id: "{{ vpcout.vpc.id }}"
         region: us-east-1
         tags:
-          Name: PublicRT
+          Name: CE3S_PublicRT
         subnets:
           - "{{ pubsub1_out.subnet.id }}"
           - "{{ pubsub2_out.subnet.id }}"
-          - "{{ pubsub3_out.subnet_id }}"
+          - "{{ pubsub3_out.subnet.id }}"
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{ igw_out.gateway_id }}"
-      register: public_route_table
+      register: public_route_table_out
+
