--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -103,7 +103,7 @@
     - name: Set up public subnet route table
       ec2_vpc_route_table:
         vpc_id: "{{ vpcout.vpc.id }}"
-        region: us-east-1
+        region: "{{ region }}"
         tags:
           Name: CE3S_PublicRT
         subnets:
@@ -113,5 +113,28 @@
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{ igw_out.gateway_id }}"
-      register: public_route_table_out
+      register: public_RT_out
 
+    - name: Create new nat gateway and allocate new EIP if a nat gateway does not yet exist in the subnet.
+      ec2_vpc_nat_gateway:
+        state: "{{ state }}"
+        subnet_id: "{{ pubsub1_out.subnet.id }}"
+        wait: yes
+        region: "{{ region }}"
+        if_exist_do_not_create: true
+      register: NATGW_out
+
+    - name: Set up private subnet route table
+      ec2_vpc_route_table:
+        vpc_id: "{{ vpcout.vpc.id }}"
+        region: "{{ region }}"
+        tags:
+          Name: CE3S_PrivateRT
+        subnets:
+          - "{{ privsub1_out.subnet.id }}"
+          - "{{ privsub2_out.subnet.id }}"
+          - "{{ privsub3_out.subnet.id }}"
+        routes:
+          - dest: 0.0.0.0/0
+            gateway_id: "{{ NATGW_out.nat_gateway_id }}"
+      register: private_RT_out
