--- a/vpc_setup.yml
+++ b/vpc_setup.yml
@@ -139,3 +139,36 @@
             gateway_id: "{{ NATGW_out.nat_gateway_id }}"
       register: private_RT_out
 
+    - debug:
+        var: "{{item}}"
+        loop:
+          - vpcout.vpc.id
+          - pubsub1_out.subnet.id
+          - pubsub2_out.subnet.id
+          - pubsub3_out.subnet.id
+          - privsub1_out.subnet.id
+          - privsub2_out.subnet.id
+          - privsub3_out.subnet.id
+          - igw_out.gateway_id
+          - NATGW_out.nat_gateway_id
+          - public_RT_out.route_table.id
+          - private_RT_out.route_table.id
+
+    - set_fact:
+        vpcid: "{{vpcout.vpc.id}}"
+        pubsub1id: "{{pubsub1_out.subnet.id}}"
+        pubsub2id: "{{pubsub2_out.subnet.id}}"
+        pubsub3id: "{{pubsub3_out.subnet.id}}"
+        privsub1id: "{{privsub1_out.subnet.id}}"
+        privsub2id: "{{privsub2_out.subnet.id}}"
+        privsub3id: "{{privsub3_out.subnet.id}}"
+        igwid: "{{igw_out.gateway_id}}"
+        NATGWid: "{{NATGW_out.nat_gateway_id}}"
+        public_RTid: "{{public_RT_out.route_table.id}}"
+        private_RTid: "{{private_RT_out.route_table.id}}"
+        cacheable: yes
+
+    - name: Create variables file for vpc output
+      copy:
+        content: "vpcid: {{vpcout.vpc.id}}\npubsub1id: {{pubsub1_out.subnet.id}}\npubsub2id: {{pubsub2_out.subnet.id}}\npubsub3id: {{pubsub3_out.subnet.id}}\nprivsub1id: {{privsub1_out.subnet.id}}\nprivsub2id: {{privsub2_out.subnet.id}}\nprivsub2id: {{privsub2_out.subnet.id}}\nprivsub3id: {{privsub3_out.subnet.id}}\nigwid: {{igw_out.gateway_id}}\nNATGWid: {{NATGW_out.nat_gateway_id}}\npublic_RTid: {{public_RT_out.route_table.id}}\nprivate_RTid: {{private_RT_out.route_table.id}}"
+        dest: vars/output_vars
