--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -49,4 +49,5 @@
           project: CE3S
           Owner: KEJOGG DevOps Team
         group_id: "{{ BastionSG_out }}"
+        vpc_subnet_id: "{{ pubsub1id }}"
       register: bastionHost_out
