--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -34,7 +34,7 @@
             from_port: 22
             to_port: 22
             cidr_ip: "{{ MYIP }}"
-        register: BastionSG_out
+      register: BastionSG_out
 
     - name: Creating Bastion Host
       ec2:
@@ -46,7 +46,7 @@
         wait_timeout: 300
         instance_tags:
           Name: "Bastion-host"
-          project: CE3S
+          Project: CE3S
           Owner: KEJOGG DevOps Team
         group_id: "{{ BastionSG_out }}"
         vpc_subnet_id: "{{ pubsub1id }}"
