--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -41,7 +41,7 @@
         key_name: CE3S-key
         region: "{{ region }}"
         instance_type: t2micro
-        image: "{{ bastion_ami }}
+        image: "{{ bastion_ami }}"
         wait: yes
         wait_timeout: 300
         instance_tags:
