--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -53,6 +53,6 @@
           Name: "Bastion_host"
           Project: CE3S
           Owner: KEJOGG DevOps Team
-        group_id: "{{ BastionSG_out }}"
+        group_id: "{{ BastionSG_out.group_id }}"
         vpc_subnet_id: "{{ pubsub1id }}"
       register: bastionHost_out
