--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -26,7 +26,7 @@
     - name: Create Sec Grp for bastion host
       ec2_group:
         name: Bastion-host-sg
-        descritption: Allow port 22 from everywhere and all port within sg
+        description: Allow port 22 from everywhere and all port within sg
         region: "{{ region }}"
         vpc_id: "{{ vpcid }}"
         rules:
