--- a/Bastion-instances.yml
+++ b/Bastion-instances.yml
@@ -1,18 +1,18 @@
 ---
-- name: Setup CE3S bastion host
+- name: Setup CE3S Bastion Host
   hosts: localhost
   connection: local
   gather_facts: no
   tasks:
-    - name: Import VPC Setup Variable
+    - name: Import VPC setup Variable
       include_vars: vars/bastion_setup
 
-    - name: Import VPC Setup Variable
+    - name: Import VPC setup Variable
       include_vars: vars/output_vars
 
     - name: Create CE3S ec2 key
       ec2_key:
-        name: CE3S_key
+        name: CE3S-key
         region: "{{ region }}"
       register: key_out
 
@@ -47,12 +47,12 @@
         instance_tags:
           Name: "Bastion_host"
           Project: CE3S
-          Owner: KEJOGG DevOps Team
+          Owner: DevOps with KEJOGG
         exact_count: 1
         count_tag:
           Name: "Bastion_host"
           Project: CE3S
-          Owner: KEJOGG DevOps Team
+          Owner: DevOps with KEJOGG
         group_id: "{{ BastionSG_out.group_id }}"
         vpc_subnet_id: "{{ pubsub1id }}"
       register: bastionHost_out
