ce3s-ec2 vars corrections

--- a/ce3s-ec2-stack.yml
+++ b/ce3s-ec2-stack.yml
@@ -9,7 +9,7 @@
       include_vars: vars/vpc-output_vars
 
     - name: Import ec2StackSetup Variable
-      include_vars: vars/ec3sStackSetup
+      include_vars: vars/ec2StackSetup
 
     - name: Create CE3S ec2 key
       ec2_key:
