--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -57,9 +57,9 @@
         vpc_subnet_id: "{{ pubsub1id }}"
       register: bastionHost_out
 
-    - name: Insert/Update "BastionSGid" in vars/vpc-output_vars
+    - name: Insert/Update "bastionSGid" in vars/vpc-output_vars
       blockinfiles:
         path: vars/vpc-output_vars
         backup: yes
         block: |
-          BastionSGid: {{BastionSG_out.group_id}}
+          bastionSGid: {{ bastionSG_out.group_id }}
