--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -57,9 +57,9 @@
         vpc_subnet_id: "{{ pubsub1id }}"
       register: bastionHost_out
 
-    - name: Insert/Update "bastionSGid" in vars/vpc-output_vars
-      blockinfiles:
+    - name: Insert/Update "BastionSGid" in vars/vpc-output_vars
+      blockinfile:
         path: vars/vpc-output_vars
         backup: yes
         block: |
-          bastionSGid: {{ BastionSG_out.group_id }}
+          BastionSGid: {{ BastionSG_out.group_id }}
