--- a/ce3s-ec2-stack.yml
+++ b/ce3s-ec2-stack.yml
@@ -55,5 +55,5 @@
             from_port: 22
             to_port: 22
             cidr_ip: "{{ MYIP }}"
-            group_id: "{{ bastionSGid }}"
+            group_id: "{{ BastionSGid }}"
       register: CE3Selb-sg_out
