elb/ce3s sg update update

--- a/ce3s-ec2-stack.yml
+++ b/ce3s-ec2-stack.yml
@@ -67,4 +67,5 @@
         purge_rules: no
         rules:
           - proto: all
-            group_id: "{{ CE3Sstacktack_output.group_id }}"
+            group_id: "{{ CE3Sstack_output.group_id }}"
+
