--- a/ce3s-ec2-stack.yml
+++ b/ce3s-ec2-stack.yml
@@ -48,7 +48,7 @@
           - proto: tcp
             from_port: 80
             to_port: 80
-            group_id: "{{ CE3SELBSG_out.group_id }}"
+            group_id: "{{ CE3SStack-sg_out.group_id }}"
 
           - proto: tcp
             from_port: 22
