--- a/ce3s-ec2-stack.yml
+++ b/ce3s-ec2-stack.yml
@@ -26,7 +26,7 @@
 
     - name: Create Security Group for Load Balancer
       ec2_group:
-        name: CE3SELB-sg
+        name: CE3Selb-sg
         description: Allow port 80 from everywhere and all port within sg
         region: "{{ region }}"
         vpc_id: "{{ vpcid }}"
@@ -35,7 +35,7 @@
             from_port: 80
             to_port: 80
             cidr_ip: 0.0.0.0/0
-      register: CE3SELBSG_out
+      register: CE3Selb_out
 
     - name: Create Security Group for CE3S Stack
       ec2_group:
@@ -48,7 +48,7 @@
           - proto: tcp
             from_port: 80
             to_port: 80
-            group_id: "{{ CE3SStack-sg_out.group_id }}"
+            group_id: "{{ CE3Selb_out.group_id }}"
 
           - proto: tcp
             from_port: 22
