--- a/ce3s-ec2-stack.yml
+++ b/ce3s-ec2-stack.yml
@@ -54,7 +54,7 @@
             from_port: 22
             to_port: 22
             group_id: "{{ BastionSGid }}"
-      register: CE3SStack-sg_out
+      register: CE3SStackSG_out
 
     - name: Update Security Group with its own sg id
       ec2_group:
@@ -65,5 +65,5 @@
         purge_rules: no
         rules:
           - proto: all
-            group_id: "{{ CE3SStack-sg_out.group_id }}"
+            group_id: "{{ CE3SStackSG_out.group_id }}"
 
