--- a/ce3s-ec2-stack.yml
+++ b/ce3s-ec2-stack.yml
@@ -67,3 +67,128 @@
           - proto: all
             group_id: "{{ CE3SStackSG_out.group_id }}"
 
+    - name: Creating Nginx web01
+      ec2:
+        key_name: CE3Skey
+        region: "{{ region }}"
+        instance_type: t2.micro
+        image: "{{ nginx_ami }}"
+        wait: yes
+        wait_timeout: 300
+        instance_tags:
+          Name: "web01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        exact_count: 1
+        count_tag:
+          Name: "web01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        group_id: "{{ CE3SStackSG_out.group_id }}"
+        vpc_subnet_id: "{{ privsub1id }}"
+      register: web01_out
+
+    - name: Creating tomcat app01
+      ec2:
+        key_name: CE3Skey
+        region: "{{region}}"
+        instance_type: t2.micro
+        image: "{{tomcat_ami}}"
+        wait: yes
+        wait_timeout: 300
+        instance_tags:
+          Name: "app01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        exact_count: 1
+        count_tag:
+          Name: "app01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        group_id: "{{CE3SStackSG_out.group_id}}"
+        vpc_subnet_id: "{{privsub1id}}"
+      register: app01_out
+
+    - name: Creating memcache mc01
+      ec2:
+        key_name: CE3Skey
+        region: "{{region}}"
+        instance_type: t2.micro
+        image: "{{memcache_ami}}"
+        wait: yes
+        wait_timeout: 300
+        instance_tags:
+          Name: "mc01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        exact_count: 1
+        count_tag:
+          Name: "mc01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        group_id: "{{CE3SStackSG_out.group_id}}"
+        vpc_subnet_id: "{{privsub1id}}"
+      register: mc01_out
+
+    - name: Creating RabbitMQ rmq01
+      ec2:
+        key_name: CE3Skey
+        region: "{{region}}"
+        instance_type: t2.micro
+        image: "{{rmq_ami}}"
+        wait: yes
+        wait_timeout: 300
+        instance_tags:
+          Name: "rmq01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        exact_count: 1
+        count_tag:
+          Name: "rmq01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        group_id: "{{CE3SStackSG_out.group_id}}"
+        vpc_subnet_id: "{{privsub1id}}"
+      register: rmq01_out
+
+    - name: Creating Mysql db01
+      ec2:
+        key_name: CE3Skey
+        region: "{{region}}"
+        instance_type: t2.micro
+        image: "{{mysql_ami}}"
+        wait: yes
+        wait_timeout: 300
+        instance_tags:
+          Name: "db01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        exact_count: 1
+        count_tag:
+          Name: "db01"
+          Project: CE3S
+          Owner: KEJOGG DevOps Team
+        group_id: "{{CE3SStackSG_out.group_id}}"
+        vpc_subnet_id: "{{privsub1id}}"
+      register: db01_out
+
+    - debug:
+        var: db01_out.tagged_instances[0].id
+
+    - local_action:
+        module: ec2_elb_lb
+        name: "vprofile-elb"
+        region: "{{region}}"
+        state: present
+        instance_ids:
+          - "{{ web01_out.tagged_instances[0].id }}"
+        purge_instance_ids: true
+        security_group_ids: "{{ vproELBSG_out.group_id }}"
+        subnets:
+          - "{{ pubsub1id }}"
+          - "{{ pubsub2id }}"
+          - "{{ pubsub3id }}"
+        listeners:
+          - protocol: http # options are http, https, ssl, tcp
+            load_balancer_port: 80
+            instance_port: 80
