--- a/ce3s-ec2-stack.yml
+++ b/ce3s-ec2-stack.yml
@@ -205,7 +205,7 @@
 
     - name: Copy login key to provision_stack directory
       copy:
-        src: loginkey_ce3s.pem
+        src: ./loginkey_ce3s.pem
         dest: provision-stack/loginkey_ce3s.pem
         mode: '0400'
 
